# SuccessionPilot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml  resume.example.txt
groups/global/: CLAUDE.md
groups/main/: CLAUDE.md
scripts/: bootstrap.ps1  start_auto.ps1  start_dashboard.ps1  xhs_detail_fetch.js  xhs_login.ps1  xhs_search_fetch.js  xhs_status.ps1
src/auto_successor/: agent_memory.py  agents.py  agents_communication.py  agents_intelligence.py  agents_planner.py  agents_types.py  api_error.py  config.py  dashboard.py  dashboard_backend.py  dashboard_fastapi_server.py  dashboard_legacy_server.py  dashboard_repository.py  dashboard_runtime_manager.py  dashboard_service.py  email_sender.py  excel_store.py  job_processor.py  llm_client.py  llm_enricher.py  logging_setup.py  main.py  models.py  notification_router.py  pipeline.py  pipeline_repository.py  pipeline_service.py  resume_loader.py  retry_queue.py  run_journal.py  run_lock.py  runtime_orchestrator.py  (+5 more)
tests/: test_dashboard_backend_core.py  test_dashboard_single_instance.py  test_excel_store_incremental.py  test_job_processor.py  test_llm_client.py  test_llm_enricher.py  test_notification_format.py  test_pipeline_flow.py  test_retry_queue.py  test_split_compatibility.py  test_state_store_digest.py  test_succession_helpers.py  test_text_utils.py  test_xhs_collector_decode.py  test_xhs_collector_sanitize.py  test_xhs_collector_search_sort.py
web/: app.js  control.html  dashboard.html  index.html  leads.html  styles.css  summary.html
(+2 files in other folders)
