[project]
name = "successionpilot"
version = "0.2.0"
description = "SuccessionPilot: Xiaohongshu successor tracking runtime with agent-style orchestration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openpyxl>=3.1.0",
  "pypdf>=5.2.0",
  "python-docx>=1.1.2",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dashboard = [
  "fastapi>=0.116.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[project.scripts]
succession-pilot = "successionpilot.main:main"
succession-pilot-dashboard = "auto_successor.dashboard:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
